# Agentic-React-RAG

./: README.md  pyproject.toml  requirements.txt
data/: url.text
src/document_ingestion/: document_processor.py
src/graph_builder/: graph_builder.py
src/nodes/: nodes.py  react_node.py
src/state/: rag_state.py
src/vectorstore/: vectorstore.py
